# loa-plugin

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  docker-compose.yml
plugin/: CMakeLists.txt  conanfile.txt  conanprofile
plugin/src/: Plugin.cpp  Version.h.in
plugin/src/api/: CurlRestClient.cpp  CurlRestClient.h  IRestClient.h
plugin/src/log/: ConsoleLogger.cpp  ConsoleLogger.h
service/: .gitignore  Dockerfile  pyproject.toml
service/src/: config.py  main.py
service/src/api/: router.py
service/src/core/: celery.py  redis.py
service/src/main/: airspaceindex.py
service/src/models/: vatglasses.py
service/src/tasks/: datafeed.py
service/src/utils/: coordinate.py
service/tests/main/: test_airspaceindex.py
service/tests/models/: test_vatglasses.py
service/tests/utils/: test_coordinate.py
src/: Plugin.cpp  Plugin.h  Version.h.in  main.cpp  main.h
src/log/: LoggerAsyncBase.h  SqlLiteLogger.cpp  SqlLiteLogger.h
src/types/: Agreement.h
tests/: CMakeLists.txt
